--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 	- incremented library api version:
 	    libcdt, libgraph, libcgraph, libgvpr, libgvc
 	- Add gvmap, cluster and gvmap.sh
+	- Deprecate dotty; prefer gvedit
 	- Add patchwork supporting squarified tree maps
 	- Add ordering as a node attribute
 	- Fix problems with font resolution
