--- a/cmd/tools/ccomps.1
+++ b/cmd/tools/ccomps.1
@@ -1,10 +1,10 @@
-.TH CCOMPS 1 "27 August 2008"
+.TH CCOMPS 1 "30 April 2011"
 .SH NAME
 ccomps \- connected components filter for graphs
 .SH SYNOPSIS
 .B ccomps
 [
-.B \-sxvnzC?
+.B \-sxvenzC?
 ]
 [
 .BI -X [#]s[-f]
@@ -21,6 +21,9 @@ decomposes graphs into their connected components,
 printing the components to standard output.
 .SH OPTIONS
 The following options are supported:
+.TP
+.B \-e
+Do not induce edges in the connected components.
 .TP
 .B \-s
 No output graph is printed. The return value can be used to
@@ -82,7 +85,7 @@ then the files will be named \fIbase.sfx\fP, \fIbase_1.sfx\fP,
 .LP
 By default, each input graph is printed, with each connected
 component given as a subgraph whose name is a concatenation of
-the name of the input graph, the string "_component_" and the
+the name of the input graph, the string "_cc_" and the
 number of the component.
 .SH OPERANDS
 The following operand is supported:
