--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+May 6, 2011
+	- Release 2.28.0
 	- incremented library api version:
 	    libcdt, libgraph, libcgraph, libgvpr, libgvc
 	- Add gvmap, cluster and gvmap.sh
