Note addition of horizontal and vertical rules

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+July 8, 2011
+    - Add basic horizontal and vertical rules to html tables
 May 6, 2011
 	- Release 2.28.0
 	- incremented library api version:
