Note addition of graphml2gv

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+July 14, 2011
+    - Add initial implementation of graphml2gv
 July 8, 2011
     - Add basic horizontal and vertical rules to html tables
 May 6, 2011
