Added warnings that the library is not thread safe.

--- a/lib/agraph/agraph.3
+++ b/lib/agraph/agraph.3
@@ -477,5 +477,7 @@ There is no way to delete string attributes or modify edge keys.
 
 Strings and uninterpreted records could be treatly more uniformly.
 
+The library is not thread-safe.
+
 .SH "AUTHOR"
 Stephen North, north@research.att.com, AT&T Research.
