--- a/lib/cgraph/cgraph.3
+++ b/lib/cgraph/cgraph.3
@@ -596,5 +596,7 @@ internal address, and object creation timestamp).
 
 The API lacks convenient functions to substitute programmer-defined ordering of
 nodes and edges but in principle this can be supported.
+
+The library is not thread safe.
 .SH "AUTHOR"
 Stephen North, north@research.att.com, AT&T Research.
