--- a/lib/graph/graph.3
+++ b/lib/graph/graph.3
@@ -93,6 +93,8 @@ data structures must be considered read\(hyonly.
 Corrupting their contents by direct updates can cause
 catastrophic errors.
 
+Warning: the library is not thread-safe.
+
 .SH "GRAPHS"
 .nf
 \f5
