Fix reversed arguments in monitor command

--- a/doc/lefty/section3.tex
+++ b/doc/lefty/section3.tex
@@ -738,7 +738,7 @@ exit} quits the editor.
 'on'} or {\tt 'off'}.
 
 \begin{flushleft}
-\tt monitor (\it fileid, mode\tt )\\
+\tt monitor (\it mode, fileid\tt )\\
 \end{flushleft}\vspace{-2\itemsep}
 {\tt monitor} turns on or off the monitoring of a file for input. {\it mode}
 can be one of {\tt 'on'} or {\tt 'off'}. {\it fileid} is an id returned from
