Add note to documentation noting that the bold, italic, etc. font markups are only available via cairo and svg.

--- a/doc/infosrc/html.1
+++ b/doc/infosrc/html.1
@@ -4,6 +4,9 @@
 that are newer than mid-November 2003. In particular, it is not part
 of release 1.10.</EM>
 <P>
+<B>NOTE:</B><EM>The font markups for bold, italic, underlining, subscript and 
+superscript are currently only available via the cairo and svg renderers.</EM>
+<P>
 If the value of a label attribute
 (<A HREF=attrs.html#d:label><TT>label</TT></A> for nodes, edges, clusters, and
 graphs, and the
