Change links in info files to refer to FAQ pages

--- a/doc/infosrc/shapes.3
+++ b/doc/infosrc/shapes.3
@@ -6,7 +6,7 @@ format. At present, shapes can be described using PostScript, via a
 file or add-on library, for use in PostScript output, or shapes can
 be specified by a bitmap-image file for use with SVG or bitmap (jpeg,
 gif, etc.) output. More information can be found on the page 
-<A HREF="http://www.graphviz.org/Documentation/html/shapehowto.html">
+<A HREF="http://www.graphviz.org/wiki/how-create-custom-shapes">
 How to create custom shapes</A>.
 
 <H2><A NAME=sdlshapes>SDL Shapes for PostScript</A></H2>
