Make the grammar used to describe types a bit cleaner; remove redundant pointf type; add new types allowing a '+' before a double or a point

--- a/doc/infosrc/attrs.1
+++ b/doc/infosrc/attrs.1
@@ -65,7 +65,7 @@ and any non-zero integer, and FALSE values by "false" or "no" (case-insensitive)
 and zero.
 In addition, there are a variety of specialized types such as
 <EM>arrowType</EM>, <EM>color</EM>,
-<EM>pointf</EM> and <EM>rankdir</EM>. Legal values for these types are given
+<EM>point</EM> and <EM>rankdir</EM>. Legal values for these types are given
 at the end.
 <P>
 In the <A NAME=h:uses><STRONG>Used By</STRONG></A> field, the
